--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
+    "@types/uuid": "^10.0.0",
+    "D": "^1.0.0",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "filepond": "^4.32.7",
@@ -29,7 +31,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@types/node": "^20.17.24",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
