--- a/client/package.json
+++ b/client/package.json
@@ -44,7 +44,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.483.0",
     "mapbox-gl": "^3.10.0",
-    "next": "15.2.3",
+    "next": "^15.3.1",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
